Update company and home state

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class='bucket-content'>
               <h1 class='mbs'>Jordan Wade</h1>
               <p class='header-about'>
-                <strong> I'm a UI Engineer at <a href="http://codeschool.com/" alt="Code School">Code School</a></strong>. I grew up in a small town in Indiana and started as a carpenter on a Amish construction crew. I traded in my tool belt for all things development and design.  Now, I call the state of Florida my&nbsp;home.
+                <strong> I'm a UI Engineer at <a href="https://www.differential.com/" alt="Differential">Differential</a></strong>. I grew up in a small town in Indiana and started as a carpenter on a Amish construction crew. I traded in my tool belt for all things development and design.  Now, I call the state of Tennessee my&nbsp;home.
               </p>
             </div>
           </div>
