Remove broken blog posts

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           </ul>
         </div>
       </section>
-      <section class='row'>
+<!--       <section class='row'>
         <div class='cell well well--2 mbxl'>
           <h2 class='tcs'>Posts</h2>
           <h3 class='header-secondary'>A written collection of my thoughts, explorations, and workflows.</h3>
@@ -88,7 +88,7 @@
             <p class='article-content'>When your lucky enough to work with great designers, sometimes you just have to try your hand at recreating their awesome work with CSS.</p>
           </article>
         </div>
-      </section>
+      </section> -->
     </main>
   </body>
   <!-- / = javascript_include_tag  'application' -->
