--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             <div class='bucket-content'>
               <h1 class='mbs'>Jordan Wade</h1>
               <p class='header-about'>
-                <strong> I'm a Senior Developer at <a href="https://www.differential.com/" alt="Differential">Differential</a></strong>. I grew up in a small town in Indiana and started as a carpenter on a Amish construction crew. I traded in my tool belt for all things development and design.  Now, I call the state of Tennessee my&nbsp;home. I'm currently building <a href="https://thebreakdownai.beehiiv.com/"><b>The Breakdown</b>,
+                <strong> I'm a Senior Developer at <a href="https://www.differential.com/" alt="Differential">Differential</a></strong>. I grew up in a small town in Indiana and started as a carpenter on a Amish construction crew. I traded in my tool belt for all things development and design.  Now, I call the state of Tennessee my&nbsp;home. I'm currently building <strong><a href="https://thebreakdownai.beehiiv.com/"><b>The Breakdown</b>,
               <i aria-hidden='true'></i>
-              </a> an exciting newsletter focused on AI that provides insightful analysis and updates on the latest advancements in the field.
+              </a></strong> an exciting newsletter focused on AI that provides insightful analysis and updates on the latest advancements in the field.
 
               </p>
             </div>
