Background color on body

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link href='https://fonts.googleapis.com/css?family=Work+Sans:400,900' rel='stylesheet' type='text/css'>
     <link href="assets/stylesheets/application.css" rel="stylesheet" type="text/css" />
   </head>
-  <body class='index'>
+  <body class='index row-b'>
     <main>
       <section class='row row-b'>
         <div class='cell well well--2 mbf'>
