--- a/index.html
+++ b/index.html
@@ -1,66 +1,100 @@
 <!DOCTYPE html>
-<html lang='en'>
+<html lang="en">
   <head>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-TG0N2NE71S"></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-TG0N2NE71S"
+    ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
+      function gtag() {
+        dataLayer.push(arguments);
+      }
       gtag('js', new Date());
-    
+
       gtag('config', 'G-TG0N2NE71S');
     </script>
-    <meta charset='UTF-8'>
+    <meta charset="UTF-8" />
     <!-- / Always force latest IE rendering engine or request Chrome Frame -->
-    <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
+    <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible" />
     <!-- / Use title if it's in the page YAML frontmatter -->
     <title>Jordan Wade</title>
-    <link href='assets/images/favicon.ico' rel='shortcut icon' type='image/x-icon'>
-    <link href='https://fonts.googleapis.com/css?family=Work+Sans:400,900' rel='stylesheet' type='text/css'>
-    <link href="assets/stylesheets/application.css" rel="stylesheet" type="text/css" />
+    <link
+      href="assets/images/favicon.ico"
+      rel="shortcut icon"
+      type="image/x-icon"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Work+Sans:400,900"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link
+      href="assets/stylesheets/application.css"
+      rel="stylesheet"
+      type="text/css"
+    />
   </head>
-  <body class='index row-b'>
+  <body class="index row-b">
     <main>
-      <section class='row row-b'>
-        <div class='cell well well--2 mbf'>
-          <div class='bucket bucket--vc'>
-            <div class='bucket-media'>
+      <section class="row row-b">
+        <div class="cell well well--2 mbf">
+          <div class="bucket bucket--vc">
+            <div class="bucket-media">
               <img src="assets/images/face.svg" />
             </div>
-            <div class='bucket-content'>
-              <h1 class='mbs'>Jordan Wade</h1>
-              <p class='header-about'>
-                <strong> I'm a Senior Developer at <a href="https://www.differential.com/" alt="Differential">Differential</a></strong>. I grew up in a small town in Indiana and started as a carpenter on a Amish construction crew. I traded in my tool belt for all things development and design.  Now, I call the state of Tennessee my&nbsp;home. I'm currently building <strong><a href="https://thetechignition.beehiiv.com/"><b>The Tech Ignition</b>,
-              <i aria-hidden='true'></i>
-              </a></strong> an exciting newsletter focused on AI that provides insightful analysis and updates on the latest advancements in the field.
-
+            <div class="bucket-content">
+              <h1 class="mbs">
+                Hello, I'm Jordan Wade, a Product Manager and Senior Engineer at
+                <a href="https://www.differential.com/" alt="Differential"
+                  >Differential</a
+                >
+              </h1>
+              <p class="header-about">
+                With over 12 years in the industry, I've embraced roles in
+                motion design, software engineering, product, and team
+                management, contributing to startups, acquired companies, and
+                major enterprises. Now based in Tennessee, I spend most outside
+                of work being a dad, and weekend woodworker.
               </p>
             </div>
           </div>
         </div>
       </section>
-      <section class='row row-b'>
-        <div class='cell well mbl'>
-          <ul class='link-list'>
-            <li class='c-icn'>
-              <a class="link-dribbble" href="https://dribbble.com/jordanwade"><b>Dribbble</b>
-              <i aria-hidden='true'></i>
+      <section class="row row-b">
+        <div class="cell well mbl">
+          <ul class="link-list">
+            <li class="c-icn">
+              <a
+                class="link-linkedin"
+                href="https://www.linkedin.com/in/jjordanwade/"
+                ><b>Linkedin</b>
+                <i aria-hidden="true"></i>
               </a>
             </li>
-            <li class='c-icn'>
-              <a class="link-twitter" href="https://twitter.com/jjordanwade"><b>Twitter</b>
-              <i aria-hidden='true'></i>
+            <li class="c-icn">
+              <a class="link-dribbble" href="https://dribbble.com/jordanwade"
+                ><b>Dribbble</b>
+                <i aria-hidden="true"></i>
               </a>
             </li>
-            <li class='c-icn'>
-              <a class="link-github" href="https://github.com/jordanwade"><b>GitHub</b>
-              <i aria-hidden='true'></i>
+            <li class="c-icn">
+              <a class="link-twitter" href="https://twitter.com/jjordanwade"
+                ><b>Twitter</b>
+                <i aria-hidden="true"></i>
+              </a>
+            </li>
+            <li class="c-icn">
+              <a class="link-github" href="https://github.com/jordanwade"
+                ><b>GitHub</b>
+                <i aria-hidden="true"></i>
               </a>
             </li>
           </ul>
         </div>
       </section>
-<!--       <section class='row'>
+      <!--       <section class='row'>
         <div class='cell well well--2 mbxl'>
           <h2 class='tcs'>Posts</h2>
           <h3 class='header-secondary'>A written collection of my thoughts, explorations, and workflows.</h3>
