--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
             </div>
             <div class="bucket-content">
               <h1 class="mbs">
-                Hello, I'm Jordan Wade, a Product Manager and Senior Engineer at
+                Hello, I'm Jordan Wade,<br />
+                a Product Manager and<br />Senior Engineer at
                 <a href="https://www.differential.com/" alt="Differential"
                   >Differential</a
                 >
@@ -58,6 +59,11 @@
                 major enterprises. Now based in Tennessee, I spend most outside
                 of work being a dad, and weekend woodworker.
               </p>
+              <br />
+
+              <p class="header-about">
+                Check back soon, I've got some neat things I want to share.
+              </p>
             </div>
           </div>
         </div>
@@ -65,14 +71,6 @@
       <section class="row row-b">
         <div class="cell well mbl">
           <ul class="link-list">
-            <li class="c-icn">
-              <a
-                class="link-linkedin"
-                href="https://www.linkedin.com/in/jjordanwade/"
-                ><b>Linkedin</b>
-                <i aria-hidden="true"></i>
-              </a>
-            </li>
             <li class="c-icn">
               <a class="link-dribbble" href="https://dribbble.com/jordanwade"
                 ><b>Dribbble</b>
