--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                 With over 12 years in the industry, I've embraced roles in
                 motion design, software engineering, product, and team
                 management, contributing to startups, acquired companies, and
-                major enterprises. Now based in Tennessee, I spend most outside
-                of work being a dad, and weekend woodworker.
+                major enterprises. Now based in Tennessee, I spend most of my
+                time outside of work being a dad, and weekend woodworker.
               </p>
               <br />
 
